<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hn.uth.examen201930010221.ui.evento.EventoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.notas.NotasFragment">

        <LinearLayout
            android:id="@+id/lNota"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLugar"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/nombre_lugar">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCord"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/coordinador">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEje"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/Ejercicio"
                    android:translationY="5sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:translationY="-1sp"

                        />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="369dp"
                android:layout_height="166dp"
                android:layout_margin="1dp"
                android:orientation="vertical"
                android:translationY="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_select_contacts"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupAcompaniantes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        app:chipSpacingHorizontal="4dp"
                        app:chipSpacingVertical="-10dp"
                        app:lineSpacing="0dp"
                        app:selectionRequired="false" />

                    <TextView
                        android:id="@+id/tvSinContactosSeleccionados"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingBottom="8dp"
                        android:text="@string/sin_contactos_seleccionados"
                        android:textColor="?colorSecondaryFixedDim" />

                    <Button
                        android:id="@+id/btnMostrarContactos"
                        style="@style/Widget.Material3.Button.IconButton.Outlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mostrar_acompaniantes" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnAcompaniantes"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccione_acompaniante" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ubicacion_ok2"
                    android:padding="2dp"
                    android:src="@drawable/loading"
                    app:tint="?colorOnPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/obteniendo_ubicacion" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ubicacion_ok2"
                    android:padding="2dp"
                    android:src="@drawable/baseline_location_on_24"
                    app:tint="?colorOnPrimary" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ubicacion_obtenida" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:translationY="-25sp">

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnCancelar"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancelar"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lContactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegresar"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regresar"
                    app:icon="@drawable/baseline_arrow_back_24" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/seleccione_acompaniante"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/lSelectAcompaniantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupSelectAcompaniantes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        app:chipSpacingHorizontal="4dp"
                        app:chipSpacingVertical="-10dp"
                        app:lineSpacing="0dp"
                        app:selectionRequired="false" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAcompaniantes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>