<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.acompaniantes.AcompaniantesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/bg_options_cards"
            android:checkedButton="@id/btnTodos"
            android:elevation="4dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btnTodos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_button1"
                android:button="@null"
                android:drawableStart="@drawable/ic_contacts"
                android:drawableTint="@drawable/text_buttons"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:text="@string/todos"
                android:textColor="@drawable/text_buttons"
                        />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAcompaniantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/sin_contactos"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?colorPrimary" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/bFabAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/importar_contactos"
        app:icon="@drawable/ic_contacts"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>