<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    app:cardCornerRadius="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/compartir"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <LinearLayout
            android:id="@+id/lContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/seleccione_acomp_compartir" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rgAcompaniantes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/seleccione_app_compartir" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/gShareOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/btnSMS"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:text="SMS"
                        android:visibility="gone"
                        app:icon="@drawable/ic_sms" />

                    <Button
                        android:id="@+id/btnWhatsapp"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:padding="10dp"
                        android:text="Whatsapp"
                        app:icon="@drawable/ic_whatsapp" />

                    <Button
                        android:id="@+id/btnCorreo"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:padding="10dp"
                        android:text="Correo"
                        app:icon="@drawable/ic_correo" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:id="@+id/lButtonsActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCompatir"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/compartir" />

            <Button
                android:id="@+id/btnCancelar"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/cancelar" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>