<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tvCord"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="TextView"
                    android:translationY="125sp" />

                <TextView
                    android:id="@+id/tvLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Titulo"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?android:attr/textColorPrimary" />

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?colorSecondaryFixedDim"
                    tools:text="08/08/2023 07:30" />

                <TextView
                    android:id="@+id/tvEjer"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="Es un parque muy bonito" />

                <LinearLayout
                    android:id="@+id/lOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:translationY="40sp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnShared"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/compartir"
                        app:icon="@drawable/ic_share_24dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEdit"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:contentDescription="@string/editar"
                        app:icon="@drawable/ic_edit_24dp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDelete"
                        style="@style/Widget.Material3.Button.IconButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/eliminar"
                        app:icon="@drawable/ic_delete_24dp"
                        tools:ignore="TouchTargetSizeCheck" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>